# fido-device-onboard-rs

./: Cargo.toml  diesel.toml  fido-device-onboard.spec
.github/workflows/: ci.yml
data-formats/: Cargo.toml
data-formats/src/: types.rs
db/: Cargo.toml
db/src/: lib.rs  main.rs  models.rs  postgres.rs  schema.rs  sqlite.rs
db_test/: Cargo.toml
db_test/src/: main.rs  models.rs  schema.rs
docs/sims/: encryption.md
dracut/52fdo/: manufacturing-client-service
examples/systemd/: fdo-client-linuxapp.service
manufacturing-client/src/: main.rs
manufacturing-server/src/handlers/: di.rs
migrations/2023-09-07-131701_first_db/: down.sql  up.sql
migrations_postgres/2023-09-07-131701_create_db/: down.sql  up.sql
migrations_sqlite/2023-09-07-131701_create_db/: down.sql  up.sql
owner-tool/: Cargo.toml
owner-tool/src/: main.rs
store/src/: db.rs  lib.rs
util/src/servers/: mod.rs
