[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
diesel = { version = "2.1.0", features = ["sqlite", "postgres", "r2d2"] }
dotenvy = "0.15"
log = "0.4"
time = "0.3"
xattr = { version = "1.0", default-features = false, optional = false }  # We *need* xattrs to store TTL

fdo-data-formats = { path = "../data-formats", version = "0.4.12" }
fdo-util = { path = "../util", version = "0.4.12" }

[[bin]]
name = "postgres_test"
doc = false

[features]
postgres = []
sqlite = []

default = ["postgres", "sqlite"]