[package]
name = "db"
version = "0.4.12"
edition = "2021"


[dependencies]
anyhow = "1.0"
diesel = { version = "2.1.0", features = ["sqlite", "postgres", "r2d2"] }
dotenvy = "0.15"

fdo-data-formats = { path = "../data-formats", version = "0.4.12" }

[features]
postgres = []
sqlite = []

default = ["postgres", "sqlite"]